<resources>
    <string name="app_name">Owl Learning</string>
    <string name="bienvenue_sur_owlearning">Bienvenue sur OWLearning !</string>
    <string name="email">Email</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="se_connecter">Se connecter</string>
    <string name="logo_owlearning">Logo OWLearning</string>
    <string name="pas_encore_de_compte">Pas encore de compte ?</string>
    <string name="creer_compte">Créer un compte</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="confirmer_motdepasse">Confirmer le mot de passe</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="deja_un_compte">Déjà un compte ?</string>
    <string name="accueil">Accueil</string>
    <string name="catalogue">Catalogue</string>
    <string name="profil">Profil</string>
    <string name="mes_cours">Mes cours</string>
    <string name="messagerie">Messagerie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pseudo">Pseudo</string>
    <string name="modifier_info_profil">Modifier mes informations</string>
    <string name="se_deconnecter">Se déconnecter</string>
    <string name="age">Âge</string>
    <string name="niveau_etude">Niveau d\'étude</string>
    <string name="chargement_cours_impossible">Chargement des cours impossible</string>
</resources>