<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.InscriptionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp">

        <include
            android:id="@+id/bandeau"
            layout="@layout/layout_bandeau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titre_inscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/creer_compte"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/violet_owlearning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bandeau" />

        <EditText
            android:id="@+id/edit_nom"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_edittext_contour_dore"
            android:hint="@string/nom"
            android:textColorHint="@android:color/darker_gray"
            android:inputType="textPersonName"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titre_inscription" />

        <EditText
            android:id="@+id/edit_prenom"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_edittext_contour_dore"
            android:hint="@string/prenom"
            android:textColorHint="@android:color/darker_gray"
            android:inputType="textPersonName"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_nom" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_edittext_contour_dore"
            android:hint="@string/email"
            android:textColorHint="@android:color/darker_gray"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_prenom" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_motdepasse"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:endIconMode="password_toggle"
            app:hintEnabled="false"
            app:endIconTint="@color/violet_owlearning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_motdepasse"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/bg_edittext_contour_dore"
                android:textColorHint="@android:color/darker_gray"
                android:hint="@string/mot_de_passe"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="48dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_confirmation_motdepasse"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:endIconMode="password_toggle"
            app:hintEnabled="false"
            app:endIconTint="@color/violet_owlearning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_motdepasse">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_confirmation_motdepasse"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:background="@drawable/bg_edittext_contour_dore"
                android:textColorHint="@android:color/darker_gray"
                android:hint="@string/confirmer_motdepasse"
                android:inputType="textPassword"
                android:paddingStart="16dp"
                android:paddingEnd="48dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_inscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/s_inscrire"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:backgroundTint="@color/violet_owlearning"
            app:cornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_confirmation_motdepasse" />

        <ProgressBar
            android:id="@+id/progress_bar_inscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:indeterminateTint="@color/violet_owlearning"
            app:layout_constraintBottom_toBottomOf="@id/btn_inscription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/btn_inscription" />

        <View
            android:id="@+id/divider"
            android:layout_width="300dp"
            android:layout_height="3dp"
            android:layout_marginTop="25dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@id/btn_inscription"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <TextView
            android:id="@+id/textview_deja_compte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/deja_un_compte"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <Button
            android:id="@+id/btn_retour_connexion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="?attr/materialButtonOutlinedStyle"
            android:text="@string/se_connecter"
            android:textColor="@color/violet_owlearning"
            app:strokeColor="@color/violet_owlearning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_deja_compte"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>