<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ConnexionActivity">

  <include
      android:id="@+id/bandeau"
      layout="@layout/layout_bandeau"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/titre_connexion"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="60dp"
      android:text="@string/bienvenue_sur_owlearning"
      android:textSize="24sp"
      android:textStyle="bold"
      android:textColor="@color/violet_owlearning"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/bandeau" />

  <EditText
      android:id="@+id/edit_email"
      android:layout_width="300dp"
      android:layout_height="50dp"
      android:layout_marginTop="60dp"
      android:background="@drawable/bg_edittext_contour_dore"
      android:hint="@string/email"
      android:textColorHint="@android:color/darker_gray"
      android:inputType="textEmailAddress"
      android:padding="10dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/titre_connexion" />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/layout_motdepasse"
      android:layout_width="300dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      app:endIconMode="password_toggle"
      app:hintEnabled="false"
      app:endIconTint="@color/violet_owlearning"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edit_email">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_motdepasse"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/bg_edittext_contour_dore"
        android:textColorHint="@android:color/darker_gray"
        android:hint="@string/mot_de_passe"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="48dp"/>
  </com.google.android.material.textfield.TextInputLayout>

  <TextView
      android:id="@+id/textView_erreur_connexion"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:textColor="@android:color/holo_red_dark"
      android:textStyle="bold"
      android:visibility="gone"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@id/layout_motdepasse" />

  <Button
    android:id="@+id/btn_connexion"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="30dp"
    android:text="@string/se_connecter"
    android:textSize="16sp"
    android:textStyle="bold"
    android:textColor="@color/white"
    android:backgroundTint="@color/violet_owlearning"
    app:cornerRadius="12dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/layout_motdepasse" />

  <ProgressBar
      android:id="@+id/progress_bar"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="gone"
      android:indeterminateTint="@color/violet_owlearning"
      app:layout_constraintBottom_toBottomOf="@id/btn_connexion"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@id/textView_erreur_connexion" />

  <View
      android:id="@+id/divider"
      android:layout_width="300dp"
      android:layout_height="3dp"
      android:layout_marginTop="25dp"
      android:background="?android:attr/listDivider"
      app:layout_constraintTop_toBottomOf="@id/btn_connexion"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />


  <TextView
      android:id="@+id/textview_pas_de_compte"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="25dp"
      android:text="@string/pas_encore_de_compte"
      android:textSize="13sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/divider" />

  <Button
      android:id="@+id/btn_creer_compte"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      style="?attr/materialButtonOutlinedStyle"
      android:text="@string/creer_compte"
      android:textColor="@color/violet_owlearning"
      app:strokeColor="@color/violet_owlearning"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/textview_pas_de_compte"/>


</androidx.constraintlayout.widget.ConstraintLayout>